--- a/SeSACTesting/Presentation/Login.storyboard
+++ b/SeSACTesting/Presentation/Login.storyboard
@@ -107,6 +107,42 @@
             </objects>
             <point key="canvasLocation" x="874" y="-35"/>
         </scene>
+        <!--InAppPurchaseViewController-->
+        <scene sceneID="KQI-nn-PBJ">
+            <objects>
+                <viewController storyboardIdentifier="InAppPurchaseViewController" title="InAppPurchaseViewController" id="A9X-gS-Tzs" customClass="InAppPurchaseViewController" customModule="SeSACTesting" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wEt-j8-82Q">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgB-pW-JS5">
+                                <rect key="frame" x="141" y="97" width="110" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67x-xY-VQB">
+                                <rect key="frame" x="159" y="233" width="75" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="buttonClicked" destination="A9X-gS-Tzs" eventType="touchUpInside" id="kJb-RE-62j"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="miW-SE-MTk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="productLabel" destination="AgB-pW-JS5" id="haw-NN-Rx1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FbA-CT-fMu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1690.8396946564885" y="-35.211267605633807"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
